--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,8 +8,13 @@
 
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
-  <link rel="icon" href="favicon.jpeg" />  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+  <link rel="icon" href="favicon.jpeg" />
+  <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" 
+    integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" 
+    crossorigin="anonymous" />
+  <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
+
  
   <title>Rizta Restaurant</title>
 </head>
@@ -40,7 +45,6 @@
           <h1 class="brand-logo">RIZTA</h1>
           <p>Restaurant</p>
         </div>
-
         <div class="navigation">
           <a href="#menus">View Menus</a>
         </div>
@@ -67,6 +71,10 @@
       </div>
     </div>
   </footer>
+
+  <div id="favorited-feedback">
+      <p>Restorant has been added to your favorite</p>
+  </div>
 
 </body>
 </html>
