--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -14,11 +14,15 @@
 
   /** MAIN */
   main .content .detail-container {
-    width: 85%;
+    /* width: 85%; */
   }
 
   main .content .restaurant-name {
     font-size: calc(3vw - 1.25vh);
+  }
+
+  main .detail-container .restaurant-reviews .reviewer-container {
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   }
 
   /** AKHIR MAIN */
@@ -76,6 +80,20 @@
 
   nav .navbar-menu a::after {
     display: none;
+  }
+
+
+  main .like {
+    right: 3rem;
+    bottom: 2rem;
+  }
+
+  main .detail-container .restaurant-info {
+    flex-direction: row;
+  }
+
+  main .detail-container .restaurant-reviews .reviewer-container {
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   }
 
 }
