--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -32,10 +32,11 @@
         <a href="#/home">Home</a>
         <a href="#/favorite">Favorite</a>
         <a href="#/contact-us">Contact Us</a>
-        <a href="https://www.linkedin.com/in/nur-rizki-adi-prasetyo-2a2ba0157/" target="_blank">About Us</a>
+        <a rel="noopener" href="https://www.linkedin.com/in/nur-rizki-adi-prasetyo-2a2ba0157/" target="_blank">About Us</a>
       </div>
     </div>
   </nav>
+  
 
   <header>
     <div class="inner-width">
