--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,5 +1,5 @@
 /* TABLET */
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
 
   /** AWAL NAV */
   nav .brand-logo {
@@ -11,6 +11,10 @@
   }
 
   /** AKHIR NAV */
+
+  header .content .brand p:last-child {
+    font-size: 3rem;
+  }
 
   /** MAIN */
   main .content .restaurant-name {
@@ -50,7 +54,7 @@
 
 
 /* Laptop 1024px */
-@media screen and (min-width: 1024px) {
+@media (min-width: 1024px) {
 
   /** NAVBAR */
   nav .hamburger-button {
@@ -119,7 +123,7 @@
 }
 
 /* Screen 4K */
-@media screen and (min-width: 2560px) {
+@media (min-width: 2560px) {
 
   /** AWAL FOOTER */
   footer {
