--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -64,7 +64,7 @@
         <p>Copyright&copy; 2021 | Rizta Restaurant. Created & Designed By <a href="#">Nur Rizki Adi Prasetyo</a></p>
       </div>
       <div class="sosmed">
-        <a href="https://web.facebook.com/nurrizki.adiprasetyo" class="fab fa-facebook-f"></a>
+        <a href="https://web.facebook.com/nurrizki.adiprasetyo" class=""><i class="fab fa-facebook-f"></i></a>
         <a href="https://twitter.com/NAdiprasetyo" class="fab fa-twitter"></a>
         <a href="https://www.instagram.com/nurrizkiadip_/" class="fab fa-instagram"></a>
         <a href="https://www.linkedin.com/in/nur-rizki-adi-prasetyo-2a2ba0157/" class="fab fa-linkedin-in"></a>
