--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,5 +1,64 @@
+@media screen and (min-width: 320px) {
+  .section-title {
+    font-size: 26px;
+  }
+
+  header .content .brand-logo {
+    font-size: 4rem;
+  }
+
+  header .content .brand p:first-child {
+    font-size: 2rem;
+  }
+
+  header .content .brand p:last-child {
+    font-size: 3rem;
+  }
+
+  main .content .card-heros {
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    gap: 24px;
+  }
+
+
+  main .content .card-heros .card-body .id {
+    font-size: 3vw;
+  }
+
+  main .content .card-heros .card-body .name a {
+    font-size: 5.5vw;
+  }
+
+  footer .sosmed a {
+    font-size: 1.35rem;
+  }
+}
+
+@media screen and (min-width: 489px) {
+  main .content .card-heros .card-body .id {
+    font-size: 1.75vw;
+  }
+
+  main .content .card-heros .card-body .name a {
+    font-size: 3.5vw;
+  }
+
+  footer .sosmed {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+  }
+
+}
+
 /* TABLET */
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
+
+  .inner-width {
+    margin: 0 auto;
+    padding: 10px 20px;
+  }
 
   /** AWAL NAV */
   nav .brand-logo {
@@ -16,7 +75,27 @@
     font-size: 3rem;
   }
 
+  header .navigation a {
+    padding: 12px 18px;
+  }
+
   /** MAIN */
+  main .content .card-heros {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+
+  main .content .card-heros .card-body .id {
+    font-size: 1rem;
+  }
+
+  main .content .card-heros .card-body .name a {
+    font-size: 1.35rem;
+  }
+
+  main .content .card-heros .card-body {
+    padding: 12px 20px 24px;
+  }
+
   main .content .restaurant-name {
     font-size: calc(3vw - 1.25vh);
   }
@@ -54,7 +133,7 @@
 
 
 /* Laptop 1024px */
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
 
   /** NAVBAR */
   nav .hamburger-button {
@@ -123,7 +202,7 @@
 }
 
 /* Screen 4K */
-@media (min-width: 2560px) {
+@media screen and (min-width: 2560px) {
 
   /** AWAL FOOTER */
   footer {
