--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -64,11 +64,11 @@
         <p>Copyright&copy; 2021 | Rizta Restaurant. Created & Designed By <a href="#">Nur Rizki Adi Prasetyo</a></p>
       </div>
       <div class="sosmed">
-        <a href="https://web.facebook.com/nurrizki.adiprasetyo" class=""><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com/NAdiprasetyo" class="fab fa-twitter"></a>
-        <a href="https://www.instagram.com/nurrizkiadip_/" class="fab fa-instagram"></a>
-        <a href="https://www.linkedin.com/in/nur-rizki-adi-prasetyo-2a2ba0157/" class="fab fa-linkedin-in"></a>
-        <a href="https://www.youtube.com/channel/UCL03ONszIr6BoSU-aee5kpA" class="fab fa-youtube"></a>
+        <a href="https://web.facebook.com/nurrizki.adiprasetyo"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com/NAdiprasetyo"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/nurrizkiadip_/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/nur-rizki-adi-prasetyo-2a2ba0157/"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.youtube.com/channel/UCL03ONszIr6BoSU-aee5kpA"><i class="fab fa-youtube"></i></a>
       </div>
     </div>
   </footer>
