--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -45,13 +45,13 @@ body {
 .inner-width {
   max-width: 1300px;
   margin: 0 auto;
-  padding: 10px 20px;
+  padding: 5px 12.5px;
 }
 
 .section-title {
   text-align: center;
   font-weight: 500;
-  font-size: 26px;
+  font-size: 8.5vw;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
 
@@ -238,7 +238,7 @@ nav .navbar-menu {
   top: 0;
   right: -100%;
   min-height: 100vh;
-  width: calc(100% - 100px);
+  width: calc(100% - 60px);
 
   background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
   display: flex;
@@ -302,19 +302,19 @@ header .content .brand {
 header .content .brand p:first-child {
   font-family: 'Raleway', sans-serif;
   margin: 5px 0;
-  font-size: 2rem;
+  font-size: 9vw;
   font-weight: 500;
 }
 
 header .content .brand p:last-child {
   font-family: 'gang_of_threeregular', sans-serif;
-  font-size: 10vw;
+  font-size: 13vw;
   font-weight: 500;
 }
 
 header .content .brand-logo {
   font-family: 'gang_of_threeregular', sans-serif;
-  font-size: 4rem;
+  font-size: 16vw;
   text-shadow: 2px 2px 0px rgba(150, 150, 150, .5);
   color: azure;
 
@@ -338,7 +338,7 @@ header .navigation a {
   border-radius: 4px;
 
   display: inline-block;
-  padding: 12px 24px;
+  padding: 10px 16px;
   background-color: #00adb5;
 
   transition: .15s linear;
@@ -378,7 +378,8 @@ main .content .card-heros {
   font-family: "Nunito", sans-serif;
   display: grid;
 
-  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  /* grid-template-columns: repeat(auto-fill, minmax(.3fr, 1fr)); */
+  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
   gap: 24px 36px;
 }
 
@@ -465,17 +466,17 @@ main .content .card-heros .card-image:hover {
 }
 
 main .content .card-heros .card-body {
-  padding: 12px 20px 24px;
+  padding: 6px 10px 14px;
 }
 
 main .content .card-heros .card-body .id {
-  font-size: .65rem;
+  font-size: 6vw;
   font-weight: 100;
   color: #333333aa;
 }
 
 main .content .card-heros .card-body .name a {
-  font-size: 1.35rem;
+  font-size: 10vw;
   font-weight: 700;
   text-decoration: none;
   padding: 12px 0 6px;
@@ -762,39 +763,37 @@ footer .sosmed {
   margin-top: 20px;
   width: 100%;
 
-  font-size: 1.3rem;
-
-  /* display: grid;
-  grid-template-columns: repeat(auto-fill, 32px);
-  justify-content: center;
-  gap: 8px; */
-
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-direction: row;
+  flex-wrap: wrap;
+
+  /* display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(44px, 1fr));
+  justify-items: center;
+  align-items: center; */
 }
 
 footer .sosmed a {
+  font-size: 10vw;
+
+  width: 44px;
+  height: 44px;
+
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
   text-decoration: none;
   color: #87cac4;
-  margin: 0 5px;
+  margin: 4px 10px;
   text-shadow: 1px 1px 1px white;
-  padding: 12px;
   background-color: white;
   border-radius: 50px;
   box-shadow: 1px 2px 2px black;
 
   transition: .08s linear;
-}
-
-footer .sosmed a:first-child {
-  padding: 12px 16px;
-}
-
-footer .sosmed a:nth-child(3),
-footer .sosmed a:nth-child(4) {
-  padding: 12px 13px;
 }
 
 footer .sosmed a:hover {
