--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Rizta is restaurant catalogue with 5 stars.">
   <meta name="theme-color" content="#00adb5">
 
   <link rel="manifest" href="manifest.json">
@@ -23,7 +24,7 @@
   <nav>
     <div class="inner-width">
       <a href="./index.html" class="brand-logo">Rizta</a>
-      <button class="hamburger-button" id="hamburger-button">
+      <button class="hamburger-button" id="hamburger-button" aria-label="Hamburger button to view navigation view in mobile resolution">
         <span></span>
         <span></span>
         <span></span>
